<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main"
        android:fillViewport="true"
        android:padding="12dp"
        tools:context=".view.ShipFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score_header"
                    android:textColor="@color/text" />


                <TextView
                    android:id="@+id/currentScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="3"
                    android:textColor="@color/text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="/"
                    android:textColor="@color/text" />

                <TextView
                    android:id="@+id/score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="15"
                    android:textColor="@color/text" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/white" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/ship_name"
                android:textColor="@color/text" />

            <EditText
                android:id="@+id/shipNameEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="WhartonX"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/text"
                android:textSize="12sp">

            </EditText>

            <TextView
                android:id="@+id/durabilityTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/durability"
                android:textColor="@color/text" />

            <SeekBar
                android:id="@+id/durabilitySb"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:max="15"
                android:progressTint="@color/white"
                android:thumbTint="@color/button" />

            <TextView
                android:id="@+id/speedTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/speed"
                android:textColor="@color/text" />

            <SeekBar
                android:id="@+id/speedSb"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:max="15"
                android:progressTint="@color/white"
                android:thumbTint="@color/button" />

            <TextView
                android:id="@+id/capasityTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/capasity"
                android:textColor="@color/text" />

            <SeekBar
                android:id="@+id/capasitySb"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:max="15"
                android:progressTint="@color/white"
                android:thumbTint="@color/button" />

            <TextView
                android:id="@+id/goButton"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:background="@color/button"
                android:gravity="center"
                android:text="DEVAM ET"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"></TextView>
        </LinearLayout>

    </ScrollView>

</layout>